--- a/Week 2/confusion/aboutus.html
+++ b/Week 2/confusion/aboutus.html
@@ -11,39 +11,59 @@
       rel="stylesheet"
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
-    <link rel="stylesheet" href="css/styles.css">
+    <link
+      rel="stylesheet"
+      href="node_modules/font-awesome/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="node_modules/bootstrap-social/bootstrap-social.css"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Ristorante Con Fusion: About Us</title>
   </head>
 
   <body>
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
-        <div class="container">
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#Navbar"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <a class="navbar-brand mr-auto" href="./index.html">Ristorante Con Fusion</a>
-          <div class="collapse navbar-collapse" id="Navbar">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="#"><span class="fa fa-info fa-lg"></span> About</a>
-              </li>
-              <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
-              <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
-              <li></li>
-            </ul>
-          </div>
+      <div class="container">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#Navbar"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand mr-auto" href="./index.html"
+          ><img src="img/logo.png" height="30" width="41"></a
+        >
+        <div class="collapse navbar-collapse" id="Navbar">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html"
+                ><span class="fa fa-home fa-lg"></span> Home</a
+              >
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#"
+                ><span class="fa fa-info fa-lg"></span> About</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"
+                ><span class="fa fa-list fa-lg"></span> Menu</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contactus.html"
+                ><span class="fa fa-address-card fa-lg"></span> Contact</a
+              >
+            </li>
+            <li></li>
+          </ul>
         </div>
-      </nav>
+      </div>
+    </nav>
 
     <header class="jumbotron">
       <div class="container">
@@ -56,7 +76,9 @@
               your culinary senses!
             </p>
           </div>
-          <div class="col-12 col-sm"></div>
+          <div class="col-12 col-sm align-self-center">
+            <img src="./img/logo.png" class="img-fluid">
+          </div>
         </div>
       </div>
     </header>
@@ -64,8 +86,8 @@
     <div class="container">
       <div class="row">
         <ol class="col-12 breadcrumb">
-            <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
-            <li class="breadcrumb-item active">About Us</li>
+          <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+          <li class="breadcrumb-item active">About Us</li>
         </ol>
         <div class="col-12">
           <h3>About Us</h3>
@@ -91,7 +113,40 @@
             cuisines in a pan.
           </p>
         </div>
-        <div></div>
+        <div class="col-sm col-sm-6">
+          <div class="card">
+            <h3 class="card-header bg-primary text-white">Facts At a Glance</h3>
+            <div class="card-body">
+              <dl class="row">
+                <dt class="col-6">Started</dt>
+                <dd class="col-6">3 Feb. 2013</dd>
+                <dt class="col-6">Major Stake Holder</dt>
+                <dd class="col-6">HK Fine Foods Inc.</dd>
+                <dt class="col-6">Last Year's Turnover</dt>
+                <dd class="col-6">$1,250,375</dd>
+                <dt class="col-6">Employees</dt>
+                <dd class="col-6">40</dd>
+              </dl>
+            </div>
+          </div>
+        </div>
+        <div class="col-12">
+          <div class="card card-body bg-light">
+            <blockquote class="blockquote">
+              <p class="mb-0">
+                You better cut the pizza in four pieces because i'm not hungry
+                enough to eat six.
+              </p>
+              <footer class="blockquote-footer">
+                Yogi Berra,
+                <cite title="Source Title"
+                  >The Wit and Wisdom of Yogi Berra,P. Pepe, Diversion Books,
+                  2014</cite
+                >
+              </footer>
+            </blockquote>
+          </div>
+        </div>
       </div>
 
       <div class="row">
@@ -141,6 +196,50 @@
           </p>
         </div>
       </div>
+      <div class="row row-content">
+        <div class="col-12 col-sm-9">
+          <h2>Facts &amp; Figures</h2>
+          <div class="table-responsive">
+            <table class="table table-striped">
+              <thead class="thead-dark">
+                <tr>
+                  <th>&nbsp;</th>
+                  <th>2013</th>
+                  <th>2014</th>
+                  <th>2015</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th>Employees</th>
+                  <td>15</td>
+                  <td>30</td>
+                  <td>40</td>
+                </tr>
+                <tr>
+                  <th>Guests Served</th>
+                  <td>15000</td>
+                  <td>45000</td>
+                  <td>100,000</td>
+                </tr>
+                <tr>
+                  <th>Special Events</th>
+                  <td>3</td>
+                  <td>20</td>
+                  <td>45</td>
+                </tr>
+                <tr>
+                  <th>Annual Turnover</th>
+                  <td>$251,325</td>
+                  <td>$1,250,375</td>
+                  <td>~$3,000,000</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+        <div class="col-12 col-sm-3"></div>
+      </div>
     </div>
 
     <footer class="footer">
@@ -163,17 +262,41 @@
               HONG KONG<br />
               <i class="fa fa-phone fa-lg"></i>: +852 1234 5678<br />
               <i class="fa fa-fax fa-lg"></i>: +852 8765 4321<br />
-              <i class="fa fa-envelope fa-lg"></i>: <a href="mailto:confusion@food.net">confusion@food.net</a>
+              <i class="fa fa-envelope fa-lg"></i>:
+              <a href="mailto:confusion@food.net">confusion@food.net</a>
             </address>
           </div>
           <div class="col-12 col-sm-4 align-self-center">
             <div class="text-center">
-              <a class="btn btn-social-icon btn-google" href="http://google.com/+"><i class="fa fa-google-plus fa-lg"></i></a> <!--Doesn't exist anymore-->
-              <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook fa-lg"></i></a>
-              <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin fa-lg"></i></a>
-              <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter fa-lg"></i></a>
-              <a class="btn btn-social-icon btn-youtube" href="http://youtube.com/"><i class="fa fa-youtube fa-lg"></i></a>
-              <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-o fa-lg"></i></a>
+              <a
+                class="btn btn-social-icon btn-google"
+                href="http://google.com/+"
+                ><i class="fa fa-google-plus fa-lg"></i
+              ></a>
+              <!--Doesn't exist anymore-->
+              <a
+                class="btn btn-social-icon btn-facebook"
+                href="http://www.facebook.com/profile.php?id="
+                ><i class="fa fa-facebook fa-lg"></i
+              ></a>
+              <a
+                class="btn btn-social-icon btn-linkedin"
+                href="http://www.linkedin.com/in/"
+                ><i class="fa fa-linkedin fa-lg"></i
+              ></a>
+              <a
+                class="btn btn-social-icon btn-twitter"
+                href="http://twitter.com/"
+                ><i class="fa fa-twitter fa-lg"></i
+              ></a>
+              <a
+                class="btn btn-social-icon btn-youtube"
+                href="http://youtube.com/"
+                ><i class="fa fa-youtube fa-lg"></i
+              ></a>
+              <a class="btn btn-social-icon" href="mailto:"
+                ><i class="fa fa-envelope-o fa-lg"></i
+              ></a>
             </div>
           </div>
         </div>
