--- a/Week 2/confusion/index.html
+++ b/Week 2/confusion/index.html
@@ -32,7 +32,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand mr-auto" href="#">Ristorante Con Fusion</a>
+        <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"></a>
         <div class="collapse navbar-collapse" id="Navbar">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
@@ -60,8 +60,9 @@
               your culinary senses!
             </p>
           </div>
-          <div class="col-12 col-sm"></div>
-        </div>
+          <div class="col-12 col-sm align-self-center">
+            <img src="./img/logo.png" class="img-fluid">
+          </div>
       </div>
     </header>
 
@@ -71,12 +72,18 @@
           <h3>Our Lipsmacking Culinary Creations</h3>
         </div>
         <div class="col col-sm order-sm-first col-md">
-          <h2>Uthappizza</h2>
-          <p>
-            A unique combination of Indian Uthappam (pancake) and Italian pizza,
-            topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia
-            onion, Guntur chillies and Buffalo Paneer.
-          </p>
+          <div class="media">
+            <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="uthappizza">
+            <div class="media-body">
+              <h2 class="mt-0">Uthappizza</h2>
+              <p>
+                A unique combination of Indian Uthappam (pancake) and Italian pizza,
+                topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia
+                onion, Guntur chillies and Buffalo Paneer.
+              </p>
+            </div>
+          </div>
+
         </div>
       </div>
 
@@ -100,14 +107,19 @@
           <h3>Meet our Culinary Specialists</h3>
         </div>
         <div class="col col-sm order-sm-first col-md">
-          <h2>Alberto Somayya</h2>
-          <h4>Executive Chef</h4>
-          <p>
-            Award winning three-star Michelin chef with wide International
-            experience having worked closely with whos-who in the culinary
-            world, he specializes in creating mouthwatering Indo-Italian fusion
-            experiences.
-          </p>
+          <div class="media">
+            <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/alberto.png" alt="alberto">
+            <div class="media-body">
+              <h2>Alberto Somayya</h2>
+              <h4>Executive Chef</h4>
+              <p class="d-none d-sm-block">
+                Award winning three-star Michelin chef with wide International
+                experience having worked closely with whos-who in the culinary
+                world, he specializes in creating mouthwatering Indo-Italian fusion
+                experiences.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
