--- a/Week 2/confusion/index.html
+++ b/Week 2/confusion/index.html
@@ -92,7 +92,10 @@
           <h3>This Month's Promotions</h3>
         </div>
         <div class="col col-sm col-md">
-          <h2>Weekend Grand Buffet</h2>
+          <div class="media">
+            <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/buffet.png" alt="buffet">
+            <div class="media-body">
+          <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
           <p>
             Featuring mouthwatering combinations with a choice of five different
             salads, six enticing appetizers, six main entrees and five choicest
@@ -100,6 +103,8 @@
             per person
           </p>
         </div>
+      </div>
+      </div>
       </div>
 
       <div class="row row-content align-items-center">
@@ -123,6 +128,82 @@
         </div>
       </div>
     </div>
+
+
+    <div class="row row-content align-items-center justify-content-center">
+      <div class="col-xl-8 col-xs-12" >
+        <div class="card">
+          <h3 class="card-header bg-warning text-white <!--text-center-->">Reserve a Table</h3>
+          <div class="card-body">
+            <form>
+              <div class="form-group row">
+                <label for="optradio" class="col-xl-1 xs-12 col-form-label">
+                  <strong>Number of Guests</strong>
+                </label>
+            
+              <div class="form-check-inline offset-1">
+                <label class="form-check-label" for="radio1">
+                  <input type="radio" class="form-check-input" id="radio1" name="optradio" value="option1">1
+                </label>
+              </div>
+
+              <div class="form-check-inline">
+                <label class="form-check-label" for="radio2">
+                  <input type="radio" class="form-check-input" id="radio2" name="optradio" value="option2">2
+                </label>
+              </div>
+
+              <div class="form-check-inline">
+                <label class="form-check-label" for="radio3">
+                  <input type="radio" class="form-check-input" id="radio3" name="optradio" value="option3">3
+                </label>
+              </div>
+
+              <div class="form-check-inline">
+                <label class="form-check-label" for="radio4">
+                  <input type="radio" class="form-check-input" id="radio4" name="optradio" value="option4">4
+                </label>
+              </div>
+
+              <div class="form-check-inline">
+                <label class="form-check-label" for="radio5">
+                  <input type="radio" class="form-check-input" id="radio5" name="optradio" value="option5">5
+                </label>
+              </div>
+
+              <div class="form-check-inline">
+                <label class="form-check-label" for="radio6">
+                  <input type="radio" class="form-check-input" id="radio6" name="optradio" value="option6">6
+                </label>
+              </div>
+            </div>
+
+        <div class="form-group row">
+          <label for="rendevouz" class="col-xl-1 col-xs-12 col-form-label">
+            <strong>Date and Time</strong>
+          </label>
+        <div class="col-xl-2 col-xs-12">
+          <input type="date" class="form-control" id="date" name="rendevouz" placeholder="Date">
+        </div>
+
+        <div class="col-xl-2 col-xs-12">
+          <input type="time" class="form-control" id="telnum" name="rendevouz" placeholder="Time">
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <div class="offset-md-1 col-md-10">
+          <button type="submit" class="btn btn-primary">Reserve</button>
+        </div>
+      </div>
+
+
+            </form>
+        </div>
+      </div>
+      </div>
+    </div>
+
 
     <footer class="footer">
       <div class="container">
