--- a/Week 2/confusion/aboutus.html
+++ b/Week 2/confusion/aboutus.html
@@ -195,17 +195,17 @@
               </div>
             </div>
           </div>
-        </div>
+   
 
-        <div id="accordion">
           <div class="card">
             <div class="card-header" role="tab" id="dannyhead">
               <h3 class="mb-0">
                 <a data-toggle="collapse" data-target="#danny">
                   Dhanasekaran Witherspoon <small>Chief Food Officer</small>
-              </a></h3>
+                </a>
+              </h3>
             </div>
-            <div role="tabpanel" class="collapse show" id="danny" data-parent="#accordion">
+            <div class="collapse" id="danny" data-parent="#accordion">
               <div class="card-body">
                 <p class="d-none d-sm-block">
                   Our CFO, Danny, as he is affectionately referred to by his
@@ -218,38 +218,57 @@
               </div>  
             </div>
           </div>
-        </div>
 
 
-          <div role="tabpanel" class="tab-pane fade" id="agumbe">
-            <h3>Agumbe Tang <small>Chief Taste Officer</small></h3>
-            <p class="d-none d-sm-block">
-              Blessed with the most discerning gustatory sense, Agumbe, our CTO,
-              personally ensures that every dish that we serve meets his exacting
-              tastes. Our chefs dread the tongue lashing that ensues if their dish
-              does not meet his exacting standards. He lives by his motto,
-              <em>You click only if you survive my lick.</em>
-            </p>
+        <div class="card">
+          <div class="card-header" role="tab" id="agumbehead">
+            <h3 class="mb-0">
+              <a data-toggle="collapse" data-target="#agumbe">
+                Agumbe Tang <small>Chief Taste Officer</small>
+              </a>
+            </h3>
           </div>
-
-          <div role="tabpanel" class="tab-pane fade" id="alberto">
-            <h3>Alberto Somayya <small>Executive Chef</small></h3>
-            <p class="d-none d-sm-block">
-              Award winning three-star Michelin chef with wide International
-              experience having worked closely with whos-who in the culinary
-              world, he specializes in creating mouthwatering Indo-Italian fusion
-              experiences. He says,
-              <em
-                >Put together the cuisines from the two craziest cultures, and you
-                get a winning hit! Amma Mia!</em
-              >
-            </p>
-          </div> 
+          <div class="collapse" id="agumbe" data-parent="#accordion">
+            <div class="card-body">
+              <p class="d-none d-sm-block">
+                  Blessed with the most discerning gustatory sense, Agumbe, our CTO,
+                  personally ensures that every dish that we serve meets his exacting
+                  tastes. Our chefs dread the tongue lashing that ensues if their dish
+                  does not meet his exacting standards. He lives by his motto,
+                  <em>You click only if you survive my lick.</em>
+              </p>
+            </div>  
+          </div>
         </div>
-      </div>
 
-        </div>
+
+          <div class="card">
+            <div class="card-header" role="tab" id="albertohead">
+              <h3 class="mb-0">
+                <a data-toggle="collapse" data-target="#alberto">
+                  Alberto Somayya <small>Executive Chef</small>
+              </a></h3>
+            </div>
+            <div class="collapse" id="alberto" data-parent="#accordion">
+              <div class="card-body">
+                <p class="d-none d-sm-block">
+                  Award winning three-star Michelin chef with wide International
+                  experience having worked closely with whos-who in the culinary
+                  world, he specializes in creating mouthwatering Indo-Italian fusion
+                  experiences. He says,
+                  <em>Put together the cuisines from the two craziest cultures, and you
+                    get a winning hit! Amma Mia!</em>
+                </p>
+              </div>  
+            </div>
+          </div>
+  
+
       </div>
+    </div>
+  </div>
+
+
       <div class="row row-content">
         <div class="col-12 col-sm-9">
           <h2>Facts &amp; Figures</h2>
