All tasks completed(assignment III)

--- a/Week 2/confusion/index.html
+++ b/Week 2/confusion/index.html
@@ -129,7 +129,7 @@
             <div class="modal-body">
               <form>
                 <div class="form-group row">
-                  <div class="col-xl-1 col-sm-12">
+                  <div class="col-xl-2 col-sm-12">
                     <label for="optradio" class="col-xs-12 col-form-label">
                       <strong>Number of Guests</strong>
                     </label>
@@ -172,16 +172,27 @@
                 </div>
 
                 <div class="form-group row">
-                  <div class="col-xl-1 col-sm-12">
+                  <div class="col-xl-2 col-sm-12">
                     <label for="optradio2" class="col-xs-12 col-form-label">
-                      <strong>Section</strong>
+                      <strong>Section </strong>
                     </label>
                   </div>
-                  <div class="form-check-inline"
+                
+
+                  <div class="btn-group" data-toggle="buttons">
+                    <label class="btn btn-success active">
+                      <input type="radio" name="optradio2" id="nonsmoking" autocomplete="off" checked>Non-Smoking
+                    </label>
+                    <label class="btn btn-danger">
+                      <input type="radio" name="optradio2" id="smoking" autocomplete="off">smoking
+                    </label>
+                  </div>
                 </div>
+
+                
   
                 <div class="form-group row">
-                  <div class="col-xl-1 col-xs-12">
+                  <div class="col-xl-2 col-xs-12">
                     <label for="rendevouz" class="col-form-label">
                       <strong>Date and Time</strong>
                     </label>
