Ready for Deployment - All NPM Scripts installed

--- a/Week 2/confusion/index.html
+++ b/Week 2/confusion/index.html
@@ -10,11 +10,13 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
 
     <!-- Bootstrap CSS -->
+    <!-- build:css css/main.css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
-    
     <link rel="stylesheet" href="css/styles.css" />
+    <!-- endbuild -->
+
     <title>Ristorante Con Fusion</title>
   </head>
 
@@ -475,6 +477,7 @@
       </div>
     </footer>
     <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
+    <!-- build:js js/main.js -->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -486,5 +489,6 @@
     <!-- Cancelled because i don't need to use tooltip when invoking a modal -->
     <!--below jquery syntax code in order to make mycarousel buttons to work-->
     <script src="JS/scripts.js"></script>
+    <!-- endbuild -->
   </body>
 </html>
